# datos-demre

./: .gitignore  README.md  install.sh  pyproject.toml
data/raw/demre_open/rar/: PROCESO-DE-ADMISIÓN-2004-INSCRIPCIÓN-17-12-2024T15-36-30.rar  PROCESO-DE-ADMISIÓN-2004-MATRÍCULA-17-12-2024T15-41-12.rar  PROCESO-DE-ADMISIÓN-2004-POSTULACIÓN-17-12-2024T15-40-37.rar  PROCESO-DE-ADMISIÓN-2004-RENDICIÓN-17-12-2024T15-39-17.rar  PROCESO-DE-ADMISIÓN-2005-INSCRIPCIÓN-17-12-2024T15-43-12.rar  PROCESO-DE-ADMISIÓN-2005-MATRÍCULA-17-12-2024T15-44-57.rar  PROCESO-DE-ADMISIÓN-2005-POSTULACIÓN-17-12-2024T15-44-22.rar  PROCESO-DE-ADMISIÓN-2005-RENDICIÓN-17-12-2024T15-43-59.rar  PROCESO-DE-ADMISIÓN-2006-INSCRIPCIÓN-17-12-2024T15-50-08.rar  PROCESO-DE-ADMISIÓN-2006-MATRÍCULA-17-12-2024T15-51-21.rar  PROCESO-DE-ADMISIÓN-2006-POSTULACIÓN-17-12-2024T15-50-58.rar  PROCESO-DE-ADMISIÓN-2006-RENDICIÓN-17-12-2024T15-50-29.rar  PROCESO-DE-ADMISIÓN-2007-MATRÍCULA-17-12-2024T15-58-01.rar  PROCESO-DE-ADMISIÓN-2007-POSTULACIÓN-17-12-2024T15-57-35.rar  PROCESO-DE-ADMISIÓN-2007-RENDICIÓN-17-12-2024T15-57-04.rar  PROCESO-DE-ADMISIÓN-2008-MATRÍCULA-17-12-2024T16-03-57.rar  PROCESO-DE-ADMISIÓN-2008-POSTULACIÓN-17-12-2024T16-01-25.rar  PROCESO-DE-ADMISIÓN-2008-RENDICIÓN-17-12-2024T16-00-49.rar  PROCESO-DE-ADMISIÓN-2009-MATRÍCULA-17-12-2024T16-11-32.rar  PROCESO-DE-ADMISIÓN-2009-POSTULACIÓN-17-12-2024T16-11-14.rar  (+33 more)
datos_demre/: __init__.py  params.py
datos_demre/scripts/: raw_processing.py
notebooks/: raw_to_intermediate.ipynb  raw_to_primary_demre_open.ipynb
